--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,19 @@
          url('Font/opensans_regular_macroman/opensans-regular-webfont.ttf') format('truetype'),
          url('Font/opensans_regular_macroman/opensans-regular-webfont.svg#open_sansregular') format('svg');
 }
+
+@font-face {
+    font-family: 'satisfyregular';
+    src: url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.eot');
+    src: url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.woff2') format('woff2'),
+         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.woff') format('woff'),
+         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.ttf') format('truetype'),
+         url('Font/satisfy_regular_macroman/Satisfy-Regular-webfont.svg#satisfyregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 a, a:visited, a:hover, a:active {
     text-decoration: none;
     color: black;
@@ -26,23 +39,50 @@ body
 	margin: auto;
 
 }
+
+
+
+nav
+{
+
+	color: #0B5A4A;
+
+	font-size: 2em;
+	padding: 2vh;
+
+
+
+	border-bottom: 6px solid #E6E0CB;
+
+}
 nav ul
 {
 	list-style-type: none;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	border: 6px solid black;
+
+	margin: 0px;
+	padding: 0px;
+
+	
+
+}
+#logo
+{
+	font-family: 'satisfyregular','opensans_regular',  Helvetica, Arial, sans-serif; 
 }
 #menu
 {
 	display: flex;
 	flex-direction: row;
 
+
 }
 #menu li
 {
 	margin: 6px;
+
 }
 
 #Moi
@@ -51,10 +91,12 @@ nav ul
 	height: 100vh;
 	max-width: 100%;
 
-	background: url("Image/backtest.jpg");
+	background: url("Image/backtest.png");
 	background-size: cover;
 
 	margin: auto;
+
+	font-size: 1.3em;
 
 
 	display: flex;
@@ -70,11 +112,15 @@ nav ul
 #Moi p
 {
 width: 30vw;
+
 }
 
 #Projets
 {
 text-align: center;
+
+font-size: 2em;
+
 }
 
 #Projets ul
@@ -82,34 +128,53 @@ text-align: center;
 	list-style-type: none;
 	display: flex;
 	flex-direction: row;
-	justify-content: space-around;
 	flex-wrap: wrap;
+
+
+	justify-content: space-around;
+	
+
+	padding: 0px;
 
 
 }
 
 
-#Contact
+footer
 {
 
 	width: 100vw;
 	height: 50vh;
 	max-width: 100%;
 
-	background: url("Image/backtest.jpg");
+	background-color: #138d75;
 	background-size: cover;
+
+
 	display: flex;
-	justify-content: space-around;
+	flex-direction: column;
+
+	align-items: center;
+	text-align: center;
+
+	color: #E6E0CB;
+
 
 }
-
+#Contact
+{
+	display: flex;
+	justify-content: space-around;
+	
+}
 #Contact ul
 {
 	display: flex;
-	align-items: center;
-
+	
 
 	list-style-type: none;
+	padding: 0px;
+
 
 	
 }
