--- a/style2.css
+++ b/style2.css
@@ -124,6 +124,7 @@ text-align: center;
 
 font-size: 2em;
 
+
 }
 
 #Projets ul
@@ -186,4 +187,71 @@ footer
 {
 	margin-left: 2vw;
 	margin-right: 2vw; 
+}
+
+/*sub page*/
+
+#Projets_style
+{
+	display: flex;
+	text-align: center;
+	justify-content: space-around;
+
+	margin: 30px;
+
+	font-size: 2em;
+	
+}
+
+#Projets_style h1
+{
+	text-align: center;
+	color:  #138d75;
+}
+#Projets_style_main
+{
+	text-align: left;
+	display: flex;
+	flex-direction: column;
+
+
+	background-color: #F0F0F0;
+
+	max-width: 40vw;
+
+	padding-right:  30px;
+	padding-left:   30px;
+	padding-top: 30px;
+	padding-bottom: 30px; 
+}
+#Projets_style_aside
+{
+	display: flex;
+	flex-direction: column;
+
+	justify-content: center;
+
+
+	background-color: #F0F0F0;
+
+	max-width: 40vw;
+
+	padding-right:  30px;
+	padding-left:   30px;
+	padding-top: 30px;
+	padding-bottom: 30px; 
+
+	text-align: center;
+}
+
+#fract_resize1 img
+{
+	
+	width: 40%;
+
+}
+#fract_resize2 img
+{
+
+	width: 80%;
 }
