--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ nav a:hover
 
 #Moi
 {
-	width: 100vw;
-	height: 100vh;
+	
+
 	max-width: 100%;
 
 	background: url("Image/backtest.png");
@@ -105,6 +105,7 @@ nav a:hover
 
 	display: flex;
 	flex-direction: column;
+
 	align-items: center;
 	text-align: center;
 	
@@ -118,6 +119,12 @@ nav a:hover
 width: 30vw;
 
 }
+
+#Moi img
+{
+	border-radius: 50%;
+}
+
 
 #Projets
 {
@@ -314,6 +321,10 @@ footer
 }
 @media screen and (max-width: 1000px) 
 {
+#Moi p
+{
+	width: 50vw;
+}
 #Projets_style
 {
  flex-direction: column;
